# THEMAP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PIPELINE_GUIDE.html  README.md  README_PIPELINE_SCRIPTS.html  UNIFIED_TASK_SYSTEM.html  build_docs.py  config.yaml  env.sh  environment.yml  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  run_pipeline.py  run_pipeline.sh  run_tests.py  setup.cfg  setup.py  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  pre-commit-autoupdate.yml  publish.yml  test.yml
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/api/: data.html  distance.html  features.html  pipeline.html
0.4.0/examples/: index.html
0.4.0/search/: search_index.json
0.4.0/tutorials/: Basics.html  Basics.ipynb  basic-distance-computation.html  getting-started.html  index.html  performance-optimization.html  working-with-tasks.html
0.4.0/user-guide/: cli.html  distance-computation.html  getting-started.html
api/: data.html  distance.html
assets/css/: custom.css
configs/: pipeline_example.yaml
configs/examples/: comprehensive_multimodal.yaml  directory_based_discovery.yaml  fsmol_benchmark.json  multi_featurizer_benchmark.yaml  protein_only_benchmark.yaml  quick_test.yaml  quick_test_cleaned.yaml  simple_directory_discovery.yaml  simple_molecule_benchmark.yaml  test_converted_csv.yaml
datasets/: sample_tasks_list.json  uniprot_mapping.csv
datasets/test/: test_proteins.csv  test_proteins.fasta
datasets/train/: CHEMBL3371729.fasta  CHEMBL3866221.fasta  train_proteins.csv  train_proteins.fasta
docs/: PIPELINE_GUIDE.md  README_PIPELINE_SCRIPTS.md  UNIFIED_TASK_SYSTEM.md  index.md
docs/api/: data.md  distance.md  features.md  pipeline.md
docs/assets/css/: custom-splito.css
docs/examples/: index.md
docs/tutorials/: Basics.ipynb  basic-distance-computation.md  getting-started.md  index.md  performance-optimization.md  working-with-tasks.md
docs/user-guide/: cli.md  distance-computation.md  getting-started.md
examples/: README.md  index.html  metadata_examples.py  quickstart.py
examples/advanced/: metalearning_example.py  task_embedding_molecules.py  task_hardness_protein.py
examples/basic/: molecule_datasets_demo.py  protein_datasets_demo.py  protein_features_example.py  tasks_demo.py
examples/datasets/: processing_summary.json
examples/distance/: molecule_distance_featurizers.py  task_distance_demo.py
notebooks/: example.ipynb  external_chemical_hardness.ipynb  external_protein_hardness.ipynb  figure_for_presentation.ipynb  metalearning_reproduction.ipynb  task_hardness.ipynb
notebooks/colab/: 01_quick_tour.ipynb  02_api_deep_dive.ipynb  03_otdd_deep_dive.ipynb
scripts/: clean_smiles.py  csv_to_jsonl.py  download_fsmol_data.py  example_otdd_usage.py  generate_protein_representations.py  metadata_datasets_demo.py  molecule_datasets_demo.py  protein_datasets_demo.py  protein_features_example.py  task_distance_demo.py  task_embedding_molecules.py  task_hardness_protein.py  tasks_demo.py
search/: search_index.json
tests/: README.md  conftest.py  test_distance.py
tests/conftest/: CHEMBL1963831.csv
tests/data/: test_distance.py  test_molecule_datapoint.py  test_molecule_dataset.py  test_molecule_dataset_comprehensive.py  test_molecule_dataset_isolated.py  test_molecule_datasets.py  test_protein_dataset.py  test_tasks.py  test_torch_dataset.py
tests/distance/: test_distance.py
tests/integration/: __init__.py  test_distance_computation.py  test_featurizer_compatibility.py  test_otdd_end_to_end.py  test_pipeline_integration.py
tests/unit/: test_featurizer_list_consistency.py  test_import_isolation.py  test_plotting.py
tests/unit/data/: test_molecule_datapoint.py  test_molecule_dataset_isolated.py  test_molecule_datasets.py  test_protein_datasets.py  test_torch_dataset.py
tests/unit/distance/: test_base.py  test_dataset_distance.py  test_molecule_distance.py  test_protein_distance.py  test_task_distance.py  test_tasks_distance_comprehensive.py
tests/unit/metalearning/: __init__.py  test_cli_and_isolation.py  test_episode_sampler.py  test_episodes.py  test_evaluation.py  test_maml.py  test_protonet.py  test_prototypical_network.py  test_runner.py  test_selection.py  test_task_splits.py
tests/unit/pipeline/: __init__.py  test_config.py  test_output.py  test_runner.py
tests/utils/: test_distance_utils.py
themap/: __init__.py  _version.py  cli.py  config.py
themap/data/: __init__.py  converter.py  distance.py  enums.py  exceptions.py  hardness.py  loader.py  metadata.py  molecule_datapoint.py  molecule_dataset.py  molecule_datasets.py  protein_dataset.py  protein_datasets.py  task.py  tasks.py  torch_dataset.py
themap/distance/: __init__.py  base.py  dataset_distance.py  distance.py  exceptions.py  metadata_distance.py  molecule_distance.py  protein_distance.py  task_distance.py  tasks_distance.py  tasks_distance.py.bak
themap/features/: __init__.py  cache.py  molecule.py  protein.py
themap/hardness/: __init__.py  hardness.py
themap/metalearning/: __init__.py  _torch.py  config.py  episodes.py  evaluation.py  runner.py  selection.py  trainer.py
themap/metalearning/data/: __init__.py  episode_sampler.py  task_splits.py
themap/metalearning/eval/: __init__.py  evaluator.py
themap/metalearning/models/: __init__.py  encoder.py  maml.py  protonet.py  (+1 more)
themap/models/: __init__.py  distance_modules.py
themap/pipeline/: __init__.py  __main__.py  cli.py  config.py  featurization.py  orchestrator.py  output.py  runner.py
themap/utils/: __init__.py  cache_utils.py  config.py  distance_utils.py  featurizer_utils.py  logging.py  memory_utils.py  plotting.py  protein_utils.py
tutorials/: Basics.html  basic-distance-computation.html  getting-started.html  index.html  performance-optimization.html  working-with-tasks.html
user-guide/: distance-computation.html  getting-started.html
(+12 files in other folders)
