[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "THEMAP"
dynamic = ["version"]
authors = [
  {name="Hosein Fooladi", email="fooladi.hosein@gmail.com"}
]
description = "Package for task hardness estimation for molecular activity prediction"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/HFooladi/THEMAP"
"Bug Tracker" = "https://github.com/HFooladi/THEMAP/issues"

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]
version-file = "themap/_version.py"
tag-pattern = "v[0-9]*"

[tool.hatch.build.targets.wheel]
packages = ["themap"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "tests/",
    "*.pyc",
]

[tool.black]
line-length = 110
target-version = ['py39', 'py310']

[tool.ruff]
lint.ignore = [
    "E501", # Never enforce `E501` (line length violations).
]
line-length = 110
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "E402", # Module level import not at top of file
]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["themap/"]
disable_warnings = ["no-data-collected"]
data_file = ".coverage/coverage"

[tool.coverage.report]
omit = ["themap/__init__.py"]

[tool.coverage.xml]
output = "coverage.xml"