[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "THEMAP"
dynamic = ["version"]
authors = [
  {name="Hosein Fooladi", email="fooladi.hosein@gmail.com"}
]
description = "Package for task hardness estimation for molecular activity prediction"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",  
    "dpu-utils>=0.2.13",
    "rdkit",  
    "datamol",
    "molfeat",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

dev = [
  "ruff",
  "black",
  "isort",
  "mypy",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocstrings",
  "mkdocstrings-python",
]

[project.urls]
"Homepage" = "https://github.com/HFooladi/THEMAP"
"Bug Tracker" = "https://github.com/HFooladi/THEMAP/issues"

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]
version-file = "themap/_version.py"
tag-pattern = "v[0-9]*"

[tool.hatch.build.targets.wheel]
packages = ["themap"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "tests/",
    "*.pyc",
]

[tool.black]
line-length = 110
target-version = ['py310', 'py311']

[tool.ruff]
# Select rule codes to enforce. "E" and "F" are defaults. Add "I" for import sorting.
# You can add more codes like "B" (flake8-bugbear) or "C4" (flake8-comprehensions) etc.
lint.select = ["E", "F", "W", "I"] # W = warnings, I = isort
lint.ignore = [
    "E501", # Line length handled by Black
]
line-length = 110
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "E402", # Module level import not at top of file
]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["themap/"]
disable_warnings = ["no-data-collected"]
data_file = ".coverage/coverage"

[tool.coverage.report]
omit = ["themap/__init__.py"]

[tool.coverage.xml]
output = "coverage.xml"